--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mantine/core": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
     "@tabler/icons-react": "^3.35.0",
-    "next": "16.0.0",
+    "next": "^16.0.2-canary.2",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
